# neurokolo

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  alembic.ini  compose.production.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: a7b3c9d14210_admin_broadcasts_and_settings.py  a8c4d9e25170_subscription_dunning_notifications.py  b9d5e0f36281_recurring_rule_verification.py  c3d4e5f60718_payment_term_snapshots.py  c4e8d1b30972_normalize_subscription_button_label.py  d4e5f6071829_landing_templates.py  e5f60718293a_landing_attribution.py  f42a4f962826_initial_schema.py  f6a718293b4c_billing_period_snapshots.py
ops/: Caddyfile  README.md  backup-loop.sh  prometheus-rules.yml  prometheus.yml  verify-backup.sh
secrets/: README.md
src/club_bot/: __init__.py  api.py  cli.py  config.py  container.py  db.py  main.py  models.py  repositories.py  schemas.py  worker.py
src/club_bot/bot/: admin_keyboards.py  admin_router.py  admin_states.py  keyboards.py  routers.py  setup.py  system_router.py
src/club_bot/domain/: __init__.py  billing.py  enums.py  rules.py
src/club_bot/integrations/: wayforpay.py
src/club_bot/services/: access.py  admin.py  broadcasts.py  stats.py  (+6 more)
tests/: test_access_expiration.py  test_admin_features.py  test_bot_setup.py  test_checkout_links.py  test_domain_rules.py  test_dunning_notifications.py  test_join_requests.py  test_keyboards.py  test_production_safety.py  test_subscription_flow.py  test_subscription_menu.py  test_wayforpay.py
