[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "telegram-subscription-club"
version = "0.8.0rc13"
description = "Telegram subscription club powered by aiogram and WayForPay"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.30,<4",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "prometheus-client>=0.22,<1",
  "python-dateutil>=2.9,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.17,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
  "types-python-dateutil>=2.9,<3",
]

[project.scripts]
club-api = "club_bot.main:run_api"
club-polling = "club_bot.main:run_polling"
club-worker = "club_bot.worker:run"
club-admin = "club_bot.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/club_bot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = ["RUF001"]

[tool.ruff.lint.per-file-ignores]
"src/club_bot/api.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
